issue 98: Text doesn't fit in the shaded box for Selected Sets and Formats step 2 header fixed
git-svn-id: https://xcmetadataservicestoolkit.googlecode.com/svn/trunk@451 72d1a826-0e72-11de-b5bf-434079a3519f

--- a/src/webapps/MetadataServicesToolkit/page-resources/css/header.css
+++ b/src/webapps/MetadataServicesToolkit/page-resources/css/header.css
@@ -91,13 +91,13 @@ project
 .StepsHeader
 {
     background-color:#f8f8f8;
-    height : 60px;
+
     border-bottom-style:solid;
     border-top-style:solid;
     border-width:1px;
     border-color:#ced2d5;
  
-    padding-left : 180px;
+
     margin-bottom : 25px;
 }
 .smallText
